Gabel Kan: Koboldland

--- a/mod/area/gabkanw.git.yml
+++ b/mod/area/gabkanw.git.yml
@@ -38,7 +38,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -109,11 +109,13 @@ Encounter List:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
+        Comment: {type: :cexostr, value: ""}
         X: {type: :float, value: -6.3621}
         Y: {type: :float, value: -1.0269}
         Z: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
+        Comment: {type: :cexostr, value: ""}
         X: {type: :float, value: -3.8619}
         Y: {type: :float, value: -2.6564}
         Z: {type: :float, value: 0.025}
@@ -353,6 +355,178 @@ Encounter List:
     TemplateResRef: {type: :resref, value: ratten}
     XPosition: {type: :float, value: 43.8142}
     YPosition: {type: :float, value: 10.4267}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 305}
+        CR: {type: :float, value: 0.5}
+        ResRef: {type: :resref, value: koboldschtze}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 300}
+        CR: {type: :float, value: 1.0}
+        ResRef: {type: :resref, value: koboldkrieger}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 300}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: koboldschtze001}
+        SingleSpawn: {type: :byte, value: 1}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 303}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: koboldkrieger001}
+        SingleSpawn: {type: :byte, value: 1}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.1909}
+        Y: {type: :float, value: -7.1895}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 7.5076}
+        Y: {type: :float, value: -7.5076}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 7.0622}
+        Y: {type: :float, value: 0.6362}
+        Z: {type: :float, value: 0.025}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Kobolde, normal
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 1800}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 43.1596}
+        Y: {type: :float, value: 51.4633}
+        Z: {type: :float, value: -0.0}
+    Tag: {type: :cexostr, value: Kobolt_normal}
+    TemplateResRef: {type: :resref, value: kobolt_normal}
+    XPosition: {type: :float, value: 89.7957}
+    YPosition: {type: :float, value: 66.6058}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 305}
+        CR: {type: :float, value: 0.5}
+        ResRef: {type: :resref, value: koboldschtze}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 300}
+        CR: {type: :float, value: 1.0}
+        ResRef: {type: :resref, value: koboldkrieger}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 300}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: koboldschtze001}
+        SingleSpawn: {type: :byte, value: 1}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 303}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: koboldkrieger001}
+        SingleSpawn: {type: :byte, value: 1}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -0.2545}
+        Y: {type: :float, value: -7.8893}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 6.8714}
+        Y: {type: :float, value: -8.2075}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 6.7441}
+        Y: {type: :float, value: -0.3181}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Kobolde, normal
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 1800}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 42.078}
+        Y: {type: :float, value: 52.2268}
+        Z: {type: :float, value: 0.0}
+    Tag: {type: :cexostr, value: Kobolt_normal}
+    TemplateResRef: {type: :resref, value: kobolt_normal}
+    XPosition: {type: :float, value: 89.923}
+    YPosition: {type: :float, value: 40.9018}
     ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
@@ -4038,29 +4212,29 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -1.70609998703003}
-        PointY: {type: :float, value: -9.34060001373291}
-        PointZ: {type: :float, value: 0.126900002360344}
+        PointX: {type: :float, value: -1.7061}
+        PointY: {type: :float, value: -9.3406}
+        PointZ: {type: :float, value: 0.1269}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.0196000002324581}
-        PointY: {type: :float, value: -9.38350009918213}
-        PointZ: {type: :float, value: 0.169799998402596}
+        PointX: {type: :float, value: -0.0196}
+        PointY: {type: :float, value: -9.3835}
+        PointZ: {type: :float, value: 0.1698}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.0251000002026558}
-        PointY: {type: :float, value: 0.0200999993830919}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -0.0251}
+        PointY: {type: :float, value: 0.0201}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -1.43900001049042}
-        PointY: {type: :float, value: 0.046399999409914}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -1.439}
+        PointY: {type: :float, value: 0.0464}
+        PointZ: {type: :float, value: 0.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_GabKan_Z1_GabKan_W1}
@@ -4105,29 +4279,29 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -1.67509996891022}
-        PointY: {type: :float, value: -0.0538999997079372}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -1.6751}
+        PointY: {type: :float, value: -0.0539}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -1.67320001125336}
-        PointY: {type: :float, value: -8.91870021820068}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -1.6732}
+        PointY: {type: :float, value: -8.9187}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.0734999999403954}
-        PointY: {type: :float, value: -8.94750022888184}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -0.0735}
+        PointY: {type: :float, value: -8.9475}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.0118000004440546}
-        PointY: {type: :float, value: -0.0742999985814095}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: 0.0118}
+        PointY: {type: :float, value: -0.0743}
+        PointZ: {type: :float, value: 0.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_GabKan_Z2_GabKan_W2}
@@ -4172,49 +4346,49 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -13.9511995315552}
-        PointY: {type: :float, value: 0.684099972248077}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -13.9512}
+        PointY: {type: :float, value: 0.6841}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -13.8739004135132}
-        PointY: {type: :float, value: -0.0760999992489815}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -13.8739}
+        PointY: {type: :float, value: -0.0761}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
-        PointY: {type: :float, value: 0.0564999990165234}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointY: {type: :float, value: 0.0565}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.0631999969482422}
-        PointY: {type: :float, value: 0.781799972057343}
-        PointZ: {type: :float, value: 0.143700003623962}
+        PointX: {type: :float, value: -0.0632}
+        PointY: {type: :float, value: 0.7818}
+        PointZ: {type: :float, value: 0.1437}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -1.29799997806549}
-        PointY: {type: :float, value: 0.787000000476837}
-        PointZ: {type: :float, value: 0.12899999320507}
+        PointX: {type: :float, value: -1.298}
+        PointY: {type: :float, value: 0.787}
+        PointZ: {type: :float, value: 0.129}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -1.30359995365143}
-        PointY: {type: :float, value: 1.57000005245209}
-        PointZ: {type: :float, value: 0.117700003087521}
+        PointX: {type: :float, value: -1.3036}
+        PointY: {type: :float, value: 1.57}
+        PointZ: {type: :float, value: 0.1177}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -12.6218004226685}
-        PointY: {type: :float, value: 1.52900004386902}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -12.6218}
+        PointY: {type: :float, value: 1.529}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -12.6340999603271}
-        PointY: {type: :float, value: 0.643999993801117}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -12.6341}
+        PointY: {type: :float, value: 0.644}
+        PointZ: {type: :float, value: 0.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_GabKan_SW_GabKan_W}
@@ -4259,29 +4433,29 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.0252999998629093}
-        PointY: {type: :float, value: -0.0758000016212463}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -0.0253}
+        PointY: {type: :float, value: -0.0758}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.0252999998629093}
-        PointY: {type: :float, value: -9.22130012512207}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: 0.0253}
+        PointY: {type: :float, value: -9.2213}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 1.97060000896454}
-        PointY: {type: :float, value: -9.27180004119873}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: 1.9706}
+        PointY: {type: :float, value: -9.2718}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 1.89479994773865}
-        PointY: {type: :float, value: 0.0252999998629093}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: 1.8948}
+        PointY: {type: :float, value: 0.0253}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointZ: {type: :float, value: 0.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_GabKan_Ab1_GabKan_W}
