--- a/mod/area/gabkannw.git.yml
+++ b/mod/area/gabkannw.git.yml
@@ -54,16 +54,19 @@ Encounter List:
         Z: {type: :float, value: 0.0296}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
+        Comment: {type: :cexostr, value: ""}
         X: {type: :float, value: 0.09}
         Y: {type: :float, value: -3.8712}
         Z: {type: :float, value: 0.0238}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
+        Comment: {type: :cexostr, value: ""}
         X: {type: :float, value: 0.0}
         Y: {type: :float, value: 0.0}
         Z: {type: :float, value: 0.0238}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
+        Comment: {type: :cexostr, value: ""}
         X: {type: :float, value: 0.036}
         Y: {type: :float, value: 0.018}
         Z: {type: :float, value: 0.0238}
@@ -374,6 +377,269 @@ Encounter List:
     TemplateResRef: {type: :resref, value: ratten}
     XPosition: {type: :float, value: 84.16}
     YPosition: {type: :float, value: 70.3947}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 305}
+        CR: {type: :float, value: 0.5}
+        ResRef: {type: :resref, value: koboldschtze}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 300}
+        CR: {type: :float, value: 1.0}
+        ResRef: {type: :resref, value: koboldkrieger}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 300}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: koboldschtze001}
+        SingleSpawn: {type: :byte, value: 1}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 303}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: koboldkrieger001}
+        SingleSpawn: {type: :byte, value: 1}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -0.1557}
+        Y: {type: :float, value: -9.1715}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 2.7589}
+        Y: {type: :float, value: -9.1326}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 2.4483}
+        Y: {type: :float, value: -0.8938}
+        Z: {type: :float, value: 0.024}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.024}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Kobolde, normal
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 1800}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 53.0118}
+        Y: {type: :float, value: 76.6978}
+        Z: {type: :float, value: -0.0}
+    Tag: {type: :cexostr, value: Kobolt_normal}
+    TemplateResRef: {type: :resref, value: kobolt_normal}
+    XPosition: {type: :float, value: 93.5056}
+    YPosition: {type: :float, value: 85.7138}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 305}
+        CR: {type: :float, value: 0.5}
+        ResRef: {type: :resref, value: koboldschtze}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 300}
+        CR: {type: :float, value: 1.0}
+        ResRef: {type: :resref, value: koboldkrieger}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 300}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: koboldschtze001}
+        SingleSpawn: {type: :byte, value: 1}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 303}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: koboldkrieger001}
+        SingleSpawn: {type: :byte, value: 1}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -0.0439}
+        Y: {type: :float, value: -5.4827}
+        Z: {type: :float, value: 0.0296}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 4.1175}
+        Y: {type: :float, value: -5.4096}
+        Z: {type: :float, value: 0.0296}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 4.2766}
+        Y: {type: :float, value: -0.5489}
+        Z: {type: :float, value: 0.0296}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.8626}
+        Y: {type: :float, value: 0.3312}
+        Z: {type: :float, value: 0.0296}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.0296}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Kobolde, normal
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 1800}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 21.9056}
+        Y: {type: :float, value: 17.8421}
+        Z: {type: :float, value: 0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 86.337}
+        Y: {type: :float, value: 75.8885}
+        Z: {type: :float, value: 0.0}
+    Tag: {type: :cexostr, value: Kobolt_normal}
+    TemplateResRef: {type: :resref, value: kobolt_normal}
+    XPosition: {type: :float, value: 63.2478}
+    YPosition: {type: :float, value: 37.7716}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 301}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: koboldhexer}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 301}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: koboldschamane}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.0296}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.4628}
+        Y: {type: :float, value: -7.3186}
+        Z: {type: :float, value: 0.0296}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 3.0341}
+        Y: {type: :float, value: -7.1574}
+        Z: {type: :float, value: 0.0296}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 2.9471}
+        Y: {type: :float, value: -0.1065}
+        Z: {type: :float, value: 0.0296}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Kobolde, Caster
+    MaxCreatures: {type: :int, value: 3}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 1}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 1800}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 23.7756}
+        Y: {type: :float, value: 18.1329}
+        Z: {type: :float, value: 0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 55.052}
+        Y: {type: :float, value: 75.4497}
+        Z: {type: :float, value: 0.0}
+    Tag: {type: :cexostr, value: enc_kobcaster}
+    TemplateResRef: {type: :resref, value: enc_kobcaster}
+    XPosition: {type: :float, value: 63.4029}
+    YPosition: {type: :float, value: 38.4378}
     ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
@@ -2979,7 +3245,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 448}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4603,7 +4869,7 @@ SoundList:
 
     Looping: {type: :byte, value: 1}
     MaxDistance: {type: :float, value: 6.0}
-    MinDistance: {type: :float, value: 0.600000023841858}
+    MinDistance: {type: :float, value: 0.6000000238418579}
     PitchVariation: {type: :float, value: 0.0}
     Positional: {type: :byte, value: 1}
     Priority: {type: :byte, value: 3}
@@ -4639,7 +4905,7 @@ SoundList:
 
     Looping: {type: :byte, value: 1}
     MaxDistance: {type: :float, value: 6.0}
-    MinDistance: {type: :float, value: 0.600000023841858}
+    MinDistance: {type: :float, value: 0.6000000238418579}
     PitchVariation: {type: :float, value: 0.0}
     Positional: {type: :byte, value: 1}
     Priority: {type: :byte, value: 3}
@@ -4675,7 +4941,7 @@ SoundList:
 
     Looping: {type: :byte, value: 1}
     MaxDistance: {type: :float, value: 6.0}
-    MinDistance: {type: :float, value: 0.600000023841858}
+    MinDistance: {type: :float, value: 0.6000000238418579}
     PitchVariation: {type: :float, value: 0.0}
     Positional: {type: :byte, value: 1}
     Priority: {type: :byte, value: 3}
@@ -4711,7 +4977,7 @@ SoundList:
 
     Looping: {type: :byte, value: 1}
     MaxDistance: {type: :float, value: 6.0}
-    MinDistance: {type: :float, value: 0.600000023841858}
+    MinDistance: {type: :float, value: 0.6000000238418579}
     PitchVariation: {type: :float, value: 0.0}
     Positional: {type: :byte, value: 1}
     Priority: {type: :byte, value: 3}
@@ -4747,7 +5013,7 @@ SoundList:
 
     Looping: {type: :byte, value: 1}
     MaxDistance: {type: :float, value: 6.0}
-    MinDistance: {type: :float, value: 0.600000023841858}
+    MinDistance: {type: :float, value: 0.6000000238418579}
     PitchVariation: {type: :float, value: 0.0}
     Positional: {type: :byte, value: 1}
     Priority: {type: :byte, value: 3}
@@ -4819,7 +5085,7 @@ SoundList:
 
     Looping: {type: :byte, value: 1}
     MaxDistance: {type: :float, value: 6.0}
-    MinDistance: {type: :float, value: 0.600000023841858}
+    MinDistance: {type: :float, value: 0.6000000238418579}
     PitchVariation: {type: :float, value: 0.0}
     Positional: {type: :byte, value: 1}
     Priority: {type: :byte, value: 3}
@@ -4857,29 +5123,29 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.3682000041008}
-        PointY: {type: :float, value: -13.8414001464844}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -0.3682}
+        PointY: {type: :float, value: -13.8414}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.955200016498566}
-        PointY: {type: :float, value: -13.8414001464844}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: 0.9552}
+        PointY: {type: :float, value: -13.8414}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 1.09409999847412}
+        PointX: {type: :float, value: 1.0941}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.0240000002086163}
+        PointZ: {type: :float, value: 0.024}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.0520999990403652}
+        PointX: {type: :float, value: -0.0521}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.0240000002086163}
+        PointZ: {type: :float, value: 0.024}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.0240000002086163}
+        PointZ: {type: :float, value: 0.024}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_GabKan_N_GabKan_NW}
@@ -4924,24 +5190,24 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.56879997253418}
-        PointY: {type: :float, value: -1.49940001964569}
-        PointZ: {type: :float, value: 0.0238000005483627}
+        PointX: {type: :float, value: -0.5688}
+        PointY: {type: :float, value: -1.4994}
+        PointZ: {type: :float, value: 0.0238}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
-        PointY: {type: :float, value: -1.52250003814697}
-        PointZ: {type: :float, value: 0.0238000005483627}
+        PointY: {type: :float, value: -1.5225}
+        PointZ: {type: :float, value: 0.0238}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.0238000005483627}
+        PointZ: {type: :float, value: 0.0238}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.539399981498718}
-        PointY: {type: :float, value: 0.0557000003755093}
-        PointZ: {type: :float, value: 0.0238000005483627}
+        PointX: {type: :float, value: -0.5394}
+        PointY: {type: :float, value: 0.0557}
+        PointZ: {type: :float, value: 0.0238}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_GabOb_NW_GabKan_NW}
