re-import Blutgardenturm by Lantanek (fix charset issues)

--- a/mod/area/gabel_bib_dac001.git.yml
+++ b/mod/area/gabel_bib_dac001.git.yml
@@ -51,7 +51,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r"
+        0: "T\xC3\xBCr"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -113,7 +113,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r"
+        0: "T\xC3\xBCr"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -175,7 +175,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r"
+        0: "T\xC3\xBCr"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -5620,7 +5620,7 @@ Placeable List:
     LocName: 
       type: :cexolocstr
       value: 
-        0: "h\xC3\x83\xE2\x82\xACngender Sack"
+        0: "h\xC3\xA4ngender Sack"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
@@ -5683,7 +5683,7 @@ Placeable List:
     LocName: 
       type: :cexolocstr
       value: 
-        0: "h\xC3\x83\xE2\x82\xACngende S\xC3\x83\xE2\x82\xACcke"
+        0: "h\xC3\xA4ngende S\xC3\xA4cke"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
@@ -5746,7 +5746,7 @@ Placeable List:
     LocName: 
       type: :cexolocstr
       value: 
-        0: "h\xC3\x83\xE2\x82\xACngende S\xC3\x83\xE2\x82\xACcke"
+        0: "h\xC3\xA4ngende S\xC3\xA4cke"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
