--- a/mod/area/gabel_blut_ug.git.yml
+++ b/mod/area/gabel_blut_ug.git.yml
@@ -112,7 +112,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r Blutgarde Kerker"
+        0: "T\xC3\xBCr Blutgarde Kerker"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -174,7 +174,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r Blutgarde Kerker"
+        0: "T\xC3\xBCr Blutgarde Kerker"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -236,7 +236,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r Blutgarde Kerker"
+        0: "T\xC3\xBCr Blutgarde Kerker"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -298,7 +298,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r Blutgarde Kerker"
+        0: "T\xC3\xBCr Blutgarde Kerker"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -360,7 +360,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r Blutgarde Kerker"
+        0: "T\xC3\xBCr Blutgarde Kerker"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -422,7 +422,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r Blutgarde Kerker"
+        0: "T\xC3\xBCr Blutgarde Kerker"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -484,7 +484,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r Blutgarde Kerker"
+        0: "T\xC3\xBCr Blutgarde Kerker"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -546,7 +546,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r Blutgarde Kerker"
+        0: "T\xC3\xBCr Blutgarde Kerker"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -608,7 +608,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r Blutgarde Kerker"
+        0: "T\xC3\xBCr Blutgarde Kerker"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -670,7 +670,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r Blutgarde Kerker"
+        0: "T\xC3\xBCr Blutgarde Kerker"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -732,7 +732,7 @@ Door List:
       type: :cexolocstr
       str_ref: 5349
       value: 
-        0: "T\xC3\x83\xC5\x92r Blutgarde Kerker"
+        0: "T\xC3\xBCr Blutgarde Kerker"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 1}
     OnClick: {type: :resref, value: door_click}
@@ -1420,7 +1420,7 @@ Placeable List:
       type: :cexolocstr
       str_ref: 14739
       value: 
-        0: "Die Oberfl\xC3\x83\xE2\x82\xACche dieses rustikal wirkenden Tisches ist von Messerspuren, Essensresten und verblassten Kohlestrichen \xC3\x83\xC5\x92berzogen."
+        0: "Die Oberfl\xC3\xA4che dieses rustikal wirkenden Tisches ist von Messerspuren, Essensresten und verblassten Kohlestrichen \xC3\xBCberzogen."
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
@@ -1560,7 +1560,7 @@ Placeable List:
     LocName: 
       type: :cexolocstr
       value: 
-        0: "Sitzfl\xC3\x83\xE2\x82\xACche"
+        0: "Sitzfl\xC3\xA4che"
     Lockable: {type: :byte, value: 0}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
@@ -1749,7 +1749,7 @@ Placeable List:
     LocName: 
       type: :cexolocstr
       value: 
-        0: "Schl\xC3\x83\xC5\x92sselkasten"
+        0: "Schl\xC3\xBCsselkasten"
     Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
