Gabel Bordell -> SO

--- a/mod/dlg/hdl_intro.dlg.yml
+++ b/mod/dlg/hdl_intro.dlg.yml
@@ -29,7 +29,7 @@ EntryList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Gr\xC3\xBC\xC3\x9Fe und willkommen in der Feuerrose."
+        0: "Gr\xC3\xBC\xC3\x9Fe und willkommen im Haus der Liebe"
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
     AnimLoop: {type: :byte, value: 1}
@@ -61,7 +61,7 @@ EntryList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Das hier ist die Feuerrose. Ein Ort an dem ausgew\xC3\xA4hlte Gesellschaft seine Zeit verbringt."
+        0: "Das hier ist das Haus der Liebe. Ein Ort an dem ausgew\xC3\xA4hlte Gesellschaft seine Zeit verbringt."
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 2
     AnimLoop: {type: :byte, value: 1}
@@ -83,7 +83,7 @@ EntryList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Bordell? Nie und nimmer, wir begleiten unsere Kunden den Tage \xC3\xBCber. Eine h\xC3\xBCbsche Dame an der Seite ist mehr Wert als es eine Bordelldame je sein k\xC3\xB6nnte. Au\xC3\x9Ferdem bieten wir noch zahlreiche Annehmlichkeiten an. Kommt und macht Euch ein eigenes Bild. "
+        0: "Bordell? Nie und nimmer, wir begleiten unsere Kunden den Tage \xC3\xBCber. Eine h\xC3\xBCbsche Dame an der Seite ist mehr Wert als es eine Bordelldame je sein k\xC3\xB6nnte."
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 3
     AnimLoop: {type: :byte, value: 1}
@@ -127,8 +127,8 @@ EntryList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Aber nat\xC3\xBCrlich, Damen aus aller L\xC3\xA4nder, gesegnet mit Sch\xC3\xB6nheit und tadellosem Benehmen. Ihr k\xC3\xB6nnt dazu geh\xC3\xB6ren, wenn ihr bereit seid das Notwendige daf\xC3\xBCr zu tun."
-NumWords: {type: :dword, value: 158}
+        0: "Aber nat\xC3\xBCrlich, Damen aus aller L\xC3\xA4nder, gesegnet mit Sch\xC3\xB6nheit und tadellosem Benehmen. Ihr k\xC3\xB6nnt dazu geh\xC3\xB6ren, wenn ihr bereit seid das notwendige daf\xC3\xBCr zu tun."
+NumWords: {type: :dword, value: 147}
 PreventZoomIn: {type: :byte, value: 0}
 ReplyList: 
   type: :list
